service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: kg35
spec:
  selector:
    app: example        # musi odpowiadać labelce z Deploymentu
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
