ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kg35
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: example.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 80
